[tool.poetry]
name = "live-beat-monitor"
version = "0.1.0"
description = ""
authors = ["Ignat Balakirev <ivbignal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.8"
pyqt6 = "6.6.1"
pyinstaller = "6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
